--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+}
+
+body {
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
 }
 
 .App-logo {
