--- a/src/Box.css
+++ b/src/Box.css
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-size: 28px;
   color: green;
-  max-width: 800px;
+  max-width: 700px;
   margin-bottom: 20px;
 }
 
@@ -23,6 +23,10 @@
 }
 
 #tempwindhum {
+  font-size: 22px;
+}
+
+#weathervalues {
   font-size: 22px;
 }
 
