CHanged background image

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -49,7 +49,8 @@
 }
 
 .card-body {
-  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
   border-radius: 10px;
   padding: 10px;
 }
