--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   font-family: sans-serif;
   text-align: center;
-  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  /* background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
   margin-top: 10px;
 }
